// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Darkens the colors in linear-gradient 1`] = `
.c0 {
  background: linear-gradient(#ff6666 0%,#000099 100%);
}

<div
  className="c0"
  end="blue"
  start="red"
/>
`;

exports[`Darkens the primary color 20% 1`] = `
.c0 {
  color: #990000;
}

<div
  className="c0"
/>
`;
